[TIP-666] Fix no-attribute alignment

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AttributeActions.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AttributeActions.less
@@ -39,4 +39,9 @@
   &--comparisonMode &-copyActions {
     flex-grow: 1;
   }
+
+  &-help {
+    color: @AknLightFontColor;
+    padding: 0 10px;
+  }
 }
